# buildservertest

./: .#.gitignore  .travis.yml  CMakeLists.txt  README.md  gtest.cmake
src/: logic.hpp  main.cpp
test/: main.cpp
